@@ -17,6 +17,66 @@ end_package
 
 begin_import
 import|import
+name|java
+operator|.
+name|util
+operator|.
+name|ArrayList
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
+name|Arrays
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
+name|Collections
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
+name|HashMap
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
+name|List
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
+name|Map
+import|;
+end_import
+
+begin_import
+import|import
 name|org
 operator|.
 name|apache
@@ -112,66 +172,6 @@ operator|.
 name|map
 operator|.
 name|EntityResolver
-import|;
-end_import
-
-begin_import
-import|import
-name|java
-operator|.
-name|util
-operator|.
-name|ArrayList
-import|;
-end_import
-
-begin_import
-import|import
-name|java
-operator|.
-name|util
-operator|.
-name|Arrays
-import|;
-end_import
-
-begin_import
-import|import
-name|java
-operator|.
-name|util
-operator|.
-name|Collections
-import|;
-end_import
-
-begin_import
-import|import
-name|java
-operator|.
-name|util
-operator|.
-name|HashMap
-import|;
-end_import
-
-begin_import
-import|import
-name|java
-operator|.
-name|util
-operator|.
-name|List
-import|;
-end_import
-
-begin_import
-import|import
-name|java
-operator|.
-name|util
-operator|.
-name|Map
 import|;
 end_import
 
@@ -395,7 +395,9 @@ name|sql
 argument_list|)
 return|;
 block|}
-comment|/** 	 * Creates a query that selects scalar values and uses default routing. 	 */
+comment|/** 	 * Creates a query that selects scalar values and uses default routing. 	 * @deprecated since 4.2. Use {@link #scalarQuery(String, Class<T>)} method. 	 */
+annotation|@
+name|Deprecated
 specifier|public
 specifier|static
 parameter_list|<
@@ -426,7 +428,9 @@ name|type
 argument_list|)
 return|;
 block|}
-comment|/** 	 * Creates a query that selects scalar values and uses routing based on the 	 * provided DataMap name. 	 */
+comment|/** 	 * Creates a query that selects scalar values and uses routing based on the 	 * provided DataMap name. 	 * @deprecated since 4.2. Use {@link #scalarQuery(String, String, Class<T>)} method. 	 */
+annotation|@
+name|Deprecated
 specifier|public
 specifier|static
 parameter_list|<
