@@ -17,6 +17,76 @@ end_package
 
 begin_import
 import|import
+name|java
+operator|.
+name|sql
+operator|.
+name|Date
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|sql
+operator|.
+name|SQLException
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|sql
+operator|.
+name|Types
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|time
+operator|.
+name|LocalDateTime
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
+name|HashMap
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
+name|List
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
+name|Map
+import|;
+end_import
+
+begin_import
+import|import
 name|org
 operator|.
 name|apache
@@ -232,76 +302,6 @@ operator|.
 name|junit
 operator|.
 name|Test
-import|;
-end_import
-
-begin_import
-import|import
-name|java
-operator|.
-name|sql
-operator|.
-name|Date
-import|;
-end_import
-
-begin_import
-import|import
-name|java
-operator|.
-name|sql
-operator|.
-name|SQLException
-import|;
-end_import
-
-begin_import
-import|import
-name|java
-operator|.
-name|sql
-operator|.
-name|Types
-import|;
-end_import
-
-begin_import
-import|import
-name|java
-operator|.
-name|time
-operator|.
-name|LocalDateTime
-import|;
-end_import
-
-begin_import
-import|import
-name|java
-operator|.
-name|util
-operator|.
-name|HashMap
-import|;
-end_import
-
-begin_import
-import|import
-name|java
-operator|.
-name|util
-operator|.
-name|List
-import|;
-end_import
-
-begin_import
-import|import
-name|java
-operator|.
-name|util
-operator|.
-name|Map
 import|;
 end_import
 
@@ -2389,11 +2389,11 @@ name|SQLSelect
 operator|.
 name|scalarQuery
 argument_list|(
+literal|"SELECT PAINTING_ID FROM PAINTING WHERE PAINTING_TITLE = #bind($a)"
+argument_list|,
 name|Integer
 operator|.
 name|class
-argument_list|,
-literal|"SELECT PAINTING_ID FROM PAINTING WHERE PAINTING_TITLE = #bind($a)"
 argument_list|)
 operator|.
 name|params
@@ -2438,11 +2438,11 @@ name|SQLSelect
 operator|.
 name|scalarQuery
 argument_list|(
+literal|"SELECT PAINTING_ID FROM PAINTING ORDER BY PAINTING_ID"
+argument_list|,
 name|Integer
 operator|.
 name|class
-argument_list|,
-literal|"SELECT PAINTING_ID FROM PAINTING ORDER BY PAINTING_ID"
 argument_list|)
 operator|.
 name|select
@@ -2534,11 +2534,11 @@ name|SQLSelect
 operator|.
 name|scalarQuery
 argument_list|(
+literal|"SELECT PAINTING_ID FROM PAINTING WHERE PAINTING_TITLE = #bind($a)"
+argument_list|,
 name|Integer
 operator|.
 name|class
-argument_list|,
-literal|"SELECT PAINTING_ID FROM PAINTING WHERE PAINTING_TITLE = #bind($a)"
 argument_list|)
 operator|.
 name|paramsArray
@@ -2584,11 +2584,13 @@ name|SQLSelect
 operator|.
 name|scalarQuery
 argument_list|(
+literal|"SELECT PAINTING_ID FROM PAINTING WHERE PAINTING_TITLE = #bind($a) "
+operator|+
+literal|"OR PAINTING_TITLE = #bind($b) ORDER BY PAINTING_ID"
+argument_list|,
 name|Integer
 operator|.
 name|class
-argument_list|,
-literal|"SELECT PAINTING_ID FROM PAINTING WHERE PAINTING_TITLE = #bind($a) OR PAINTING_TITLE = #bind($b) ORDER BY PAINTING_ID"
 argument_list|)
 operator|.
 name|paramsArray
@@ -2681,15 +2683,15 @@ name|SQLSelect
 operator|.
 name|scalarQuery
 argument_list|(
-name|Integer
-operator|.
-name|class
-argument_list|,
 literal|"SELECT PAINTING_ID FROM PAINTING #chain('OR' 'WHERE') "
 operator|+
 literal|"#chunk($a) ESTIMATED_PRICE #bindEqual($a) #end "
 operator|+
 literal|"#chunk($b) PAINTING_TITLE #bindEqual($b) #end #end ORDER BY PAINTING_ID"
+argument_list|,
+name|Integer
+operator|.
+name|class
 argument_list|)
 operator|.
 name|paramsArray
@@ -2808,15 +2810,15 @@ name|SQLSelect
 operator|.
 name|scalarQuery
 argument_list|(
-name|Integer
-operator|.
-name|class
-argument_list|,
 literal|"SELECT PAINTING_ID FROM PAINTING #chain('OR' 'WHERE') "
 operator|+
 literal|"#chunk($a) ESTIMATED_PRICE #bindEqual($a) #end "
 operator|+
 literal|"#chunk($b) PAINTING_TITLE #bindEqual($b) #end #end ORDER BY PAINTING_ID"
+argument_list|,
+name|Integer
+operator|.
+name|class
 argument_list|)
 operator|.
 name|params
